[gd_scene load_steps=23 format=3 uid="uid://ck0p1fi32jcd3"]

[ext_resource type="Script" path="res://Frog.gd" id="1_va6ux"]
[ext_resource type="Texture2D" uid="uid://i08dvygxjix7" path="res://sunland_resources/Sunny-land-files/Sunny-land-assets-files/PNG/spritesheets/enemy-deadth.png" id="2_6nbjd"]
[ext_resource type="Texture2D" uid="uid://duppqdrmhuayt" path="res://sunland_resources/Sunny-land-files/Sunny-land-assets-files/PNG/spritesheets/frog-idle.png" id="3_adugq"]
[ext_resource type="Texture2D" uid="uid://dyp0vjxy2yg3c" path="res://sunland_resources/Sunny-land-files/Sunny-land-assets-files/PNG/spritesheets/frog-jump.png" id="4_f1vel"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qanp2"]
atlas = ExtResource("2_6nbjd")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1kyp"]
atlas = ExtResource("2_6nbjd")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_s33a5"]
atlas = ExtResource("2_6nbjd")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_4i48x"]
atlas = ExtResource("2_6nbjd")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_5o2b6"]
atlas = ExtResource("2_6nbjd")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_iox42"]
atlas = ExtResource("2_6nbjd")
region = Rect2(200, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_pn8af"]
atlas = ExtResource("3_adugq")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxfwb"]
atlas = ExtResource("3_adugq")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oepl2"]
atlas = ExtResource("3_adugq")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8vkn"]
atlas = ExtResource("3_adugq")
region = Rect2(105, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cukrh"]
atlas = ExtResource("4_f1vel")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxegy"]
atlas = ExtResource("4_f1vel")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5usb"]
atlas = ExtResource("4_f1vel")
region = Rect2(70, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_btk3x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qanp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1kyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s33a5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i48x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5o2b6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iox42")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn8af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn8af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn8af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn8af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn8af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn8af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn8af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn8af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn8af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn8af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn8af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxfwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oepl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8vkn")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cukrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxegy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5usb")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sg13v"]
radius = 8.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cpkvh"]
radius = 64.0
height = 128.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y7sgq"]
size = Vector2(16, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ltql6"]
size = Vector2(25, 10)

[node name="Frog" type="CharacterBody2D"]
script = ExtResource("1_va6ux")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -11)
sprite_frames = SubResource("SpriteFrames_btk3x")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("CapsuleShape2D_sg13v")

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(0, -9)
shape = SubResource("CapsuleShape2D_cpkvh")

[node name="FogDeath" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FogDeath"]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_y7sgq")

[node name="PlayerCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(-0.5, -5)
shape = SubResource("RectangleShape2D_ltql6")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="FogDeath" to="." method="_on_fog_death_body_entered"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
